syntax = "proto3";

option csharp_namespace = "MyNetCoreServer.Proto";

package MyNetCoreServer.Proto;

service BookGrpc{
	rpc CreateBook(CreateBookCommand) returns (CreateBookResult);
}

message CreateBookCommand{
	string buyerId=1;
	int32 count=2;
	double price=3;
	string unit=4;
};

message CreateBookResult{
	int32 id=1;
}
